# Django_basics

./: .env  .gitignore  README  docker-compose.yml  pyproject.toml  quotes_hw9.json
postgres-data/: postmaster.pid
postgres-data/base/1/: pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16389  16390  16395  16397  16398  16401  16403  16405  16406  16409  16411  16417  16419  16423  16425  16426  16429  16431  16433  16445  16452  16453  16468  16483  16497  16526  16531  16532  16534  16540  16542  16547  16562  16575  16577  16581  16582  (+37 more)
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
quoteapp/: admin.py  models.py  urls.py  views.py
quoteapp/migrations/: 0001_initial.py  0002_alter_author_description_alter_quote_quote.py
quoteapp/templates/quoteapp/: author.html  base.html  detail.html  quote.html
quotes/: export_from_json_to_postgres.py  manage.py  settings.py
quotes/quoteapp/: forms.py
quotes/quoteapp/templates/quoteapp/: index.html  tag.html
quotes/quotes/: settings.py
quotes/users/: apps.py
quotes/users/templates/users/: signup.html
users/: forms.py  views.py
users/migrations/: 0001_initial.py
